Details
-
Bug
-
Resolution: Done
-
P4: Low
-
5.9.1
-
None
-
Qt 5.9.1
macOS 10.12.6
Xcode 9.0
-
291233a8d05b79a19e3ae2951824d1c0444cbd27
Description
When building a Qt project on macOS with Xcode 9.0, you will see a warning in qglobal.h on the line:
Q_CORE_EXPORT const char *qVersion() Q_DECL_NOTHROW;
The warning is:
In file included from Qt/5.9.1/clang_64/lib/QtCore.framework/Headers/QtGlobal:1: Qt/5.9.1/clang_64/lib/QtCore.framework/Headers/qglobal.h:358:35: warning: this function declaration is not a prototype [-Wstrict-prototypes] Q_CORE_EXPORT const char *qVersion() Q_DECL_NOTHROW;
Attachments
For Gerrit Dashboard: QTBUG-63450 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
207378,3 | Fix strict-prototypes warning with qVersion function | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |