Fix strict-prototypes warning with qVersion function

This is enabled by default with Xcode 9 and would therefore be seen by
anyone calling this function from C or Objective-C.

Task-number: QTBUG-63450
Change-Id: Iecd67017b6774c9f2fce2433002ff852058dd3ed
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>